--- a/src/template.html
+++ b/src/template.html
@@ -469,6 +469,8 @@
         <div class="header">
             <h1>🚀 任务时间轴</h1>
             <p>机器人实验室团队</p>
+            <p>用电脑看效果最佳哦</p>
+
         </div>
 
         <div class="stats">
